Fix typo in my own name
Finish what commit 36d7605e0f8b86ed330ba6e3695229325f8df8c6 started

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/src/appearancesettingsbase.ui
+++ b/src/appearancesettingsbase.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author>Luis Pereira &lt;luis.artur.pereira@gmail.com&gt;</author>
+ <author>Luís Pereira &lt;luis.artur.pereira@gmail.com&gt;</author>
  <class>AppearanceSettingsBase</class>
  <widget class="QWidget" name="AppearanceSettingsBase">
   <property name="geometry">
