Fixes alternative browser settings not being saved
The alternative browser settings where not being saved.
The default KUrlRequester USER property is 'url' which doesn't seem to work
properly. We can define which property to use setting the kcfg_property.
The property we want is 'text'.

Reported-by  : Maykel <maykelon@gmail.com>
Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/src/appletsettingsbase.ui
+++ b/src/appletsettingsbase.ui
@@ -134,6 +134,9 @@
           <property name="showLocalProtocol" stdset="0">
            <bool>true</bool>
           </property>
+          <property name="kcfg_property" stdset="0">
+           <cstring>text</cstring>
+          </property>
          </widget>
         </item>
        </layout>
